--- a/index.html
+++ b/index.html
@@ -143,9 +143,9 @@
         <div class="container-footer">
             <div class="d-flex row">
                 <address class="info d-flex">
-                    <a href="#"><img src="image/logotype-sm-dark.svg" alt="Sweetaste logo flower"></a>
-                    <p class="mt-auto">07-1234-5678</p>
-                    <p>sweetaste@email.com 800</p>
+                    <a href="#" class="mb-auto"><img src="image/logotype-sm-dark.svg" alt="Sweetaste logo flower"></a>
+                    <p>07-1234-5678</p>
+                    <p>sweetaste@email.com</p>
                     <p class="mb-24">高雄市新興區幸福路 520 號</p>
                     <ul class="sns d-flex">
                         <li class="icon"><a href="#">
