修改：補連結、微調 class

--- a/index.html
+++ b/index.html
@@ -141,11 +141,11 @@
     </aside>
     <footer class="footer">
         <div class="container-footer">
-            <div class="d-flex row">
+            <div class="d-flex jc-sb">
                 <address class="info d-flex">
                     <a href="#" class="mb-auto"><img src="image/logotype-sm-dark.svg" alt="Sweetaste logo flower"></a>
-                    <p>07-1234-5678</p>
-                    <p>sweetaste@email.com</p>
+                    <a href="tel:+886 07-1234-5678">07-1234-5678</a>
+                    <a href="mailto:sweetaste@email.com">sweetaste@email.com</a>
                     <p class="mb-24">高雄市新興區幸福路 520 號</p>
                     <ul class="sns d-flex">
                         <li class="icon"><a href="#">
